attempt to fix text not working on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
 	--dark-mode-primary-background-color: #171617;
 	--secondary-background-color: #eeeeee;
 	--dark-mode-secondary-background-color: #302f30;
-	--default-font-family: 'Atkinson Hyperlegible', sans-serif;
+	--default-font-family: 'Atkinson Hyperlegible', monospace, Helvetica, Arial, sans-serif;
 	--default-font-size: 20px;
 	--social-link-color: #000000;
 	--social-link-hover-color: #ffffff;
